--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -126,6 +126,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="token-item-element.html">
 <link rel="import" href="token-add-element.html">
 <link rel="import" href="user-menu-element.html">
+<link rel="import" href="teams-list-element.html">
+<link rel="import" href="team-item-element.html">
 <link rel="import" href="members-list-element.html">
 <link rel="import" href="member-item-element.html">
 <link rel="import" href="member-page-element.html">
