--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -183,6 +183,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             app.route = 'tokens';
         });
 
+        page('/teams', function() {
+            app.route = 'teams';
+        });
+
         page('/members', function() {
             app.route = 'members';
         });
