--- a/app/elements/teams-list-element.html
+++ b/app/elements/teams-list-element.html
@@ -20,7 +20,7 @@
                 @apply(--layout-flex);
             }
         </style>
-        <paper-card heading="Edit Team">
+        <paper-card heading="Teams">
             <div class="card-content">
                 <div hidden$="[[!hasTeams]]" class="list-options">
                     <paper-tooltip for="searchTeamBtn" position="top">Toggle Search</paper-tooltip>
@@ -69,9 +69,9 @@
                 <p hidden$="[[hasTeams]]">
                     No teams found here. You can add some by using the action button!
                 </p>
+                <paper-fab id="addBtn" icon="add" on-tap="_openAddTeamModal"></paper-fab>
             </div>
         </paper-card>
-        <paper-fab id="addBtn" icon="add" on-tap="_openAddTeamModal"></paper-fab>
         <team-add-element></team-add-element>
         <team-edit-element team="[[selectedTeam]]"></team-edit-element>
     </template>
@@ -255,8 +255,17 @@
                     el._openAddTeamModal();
                 },
                 _addTeam: function(e) {
-                    var team = e.detail.team;
-                    this.push('teams', team);
+                    var team = e.detail.team,
+                    newTeam = {
+                        id: -1,
+                        name: team.name,
+                        members: [],
+                        policy: {
+                            operator: 'DENY',
+                            rules: []
+                        }
+                    };
+                    this.push('teams', newTeam);
                 },
                 _showDialog: function(info) {
                     var dialog = this.querySelector('dialog-element'),
