--- a/app/index.html
+++ b/app/index.html
@@ -246,6 +246,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     {
                         id: 1,
                         name: 'Owners',
+                        description: null,
                         members: [1,2,3],
                         policy: {
                             operator: 'ALLOW',
@@ -254,6 +255,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     }, {
                         id: 2,
                         name: 'QA Team',
+                        description: null,
                         members: [4],
                         policy: {
                             operator: 'DENY',
@@ -270,6 +272,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     }, {
                         id: 3,
                         name: 'Dev Team',
+                        description: null,
                         members: [1,2,3],
                         policy: {
                             operator: 'DENY',
