--- a/app/elements/user-menu-element.html
+++ b/app/elements/user-menu-element.html
@@ -12,10 +12,16 @@
                 display: inline-block;
             }
 
-            .name {
-                line-height: 44px;
+            .name,
+            .org {
+                /*line-height: 44px;*/
                 margin-right: 10px;
                 font-weight: 300;
+            }
+
+            .org {
+                font-size: .9em;
+                color: #999;
             }
 
             gravatar-component >::content img {
@@ -36,6 +42,9 @@
             <paper-button class="user-menu dropdown-trigger" noink>
                 <gravatar-component class="pull-right" email="[[user.email]]" retina size="40" alt-text="[[menuText]]"></gravatar-component>
                 <span class="name pull-right">[[menuText]]</span>
+                <template is="dom-if" if="[[team]]">
+                    <br><span class="org pull-right">[[organization.name]] | [[team.name]]</span>
+                </template>
             </paper-button>
 
             <paper-menu class="dropdown-content">
@@ -70,6 +79,29 @@
                                 lastName: LAST_NAME,
                                 email: EMAIL
                             }
+                        }
+                    },
+                    organization: {
+                        type: Object,
+                        value: function() {
+                            return ORG;
+                        }
+                    },
+                    hasOrg: {
+                        type: Boolean,
+                        value: function() {
+                            return Object.keys(ORG).length > 0;
+                        }
+                    },
+                    team: {
+                        type: Object,
+                        value: function() {
+                            var org = ORG;
+                            if (Object.keys(org).length) {
+                                return org.teams.slice().shift();
+                            }
+
+                            return null;
                         }
                     },
                     menuText: {
