single team's page info - members list

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -130,6 +130,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="team-item-element.html">
 <link rel="import" href="team-add-element.html">
 <link rel="import" href="team-edit-element.html">
+<link rel="import" href="team-page-element.html">
+<link rel="import" href="team-members-list-element.html">
+<link rel="import" href="team-member-item-element.html">
 <link rel="import" href="members-list-element.html">
 <link rel="import" href="member-item-element.html">
 <link rel="import" href="member-page-element.html">
@@ -139,7 +142,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="policy-item-element.html">
 <link rel="import" href="policy-page-element.html">
 <link rel="import" href="policy-add-element.html">
-<link rel="import" href="policy-edit-element.html">
+<!-- <link rel="import" href="policy-edit-element.html"> -->
 <link rel="import" href="grid-list-element.html">
 
 <!-- Coming from Polymist -->
