--- a/app/index.html
+++ b/app/index.html
@@ -630,6 +630,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
                             <teams-list-element data-route="teams"></teams-list-element>
 
+                            <team-page-element data-route="team" id="[[params.id]]"></team-page-element>
+
                             <members-list-element data-route="members"></members-list-element>
 
                             <member-page-element data-route="member" id="[[params.id]]"></member-page-element>
