invite member element / rules list - items

--- a/app/elements/team-members-list-element.html
+++ b/app/elements/team-members-list-element.html
@@ -10,6 +10,7 @@
 
             paper-card {
                 display: block;
+                margin-bottom: 50px;
             }
 
             .flex-horizontal-with-ratios {
