--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -133,7 +133,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="team-page-element.html">
 <link rel="import" href="team-members-list-element.html">
 <link rel="import" href="team-member-item-element.html">
-<link rel="import" href="members-list-element.html">
+<link rel="import" href="team-member-invite-element.html">
+<link rel="import" href="team-rules-list-element.html">
+<link rel="import" href="team-rule-item-element.html">
+<!-- <link rel="import" href="members-list-element.html">
 <link rel="import" href="member-item-element.html">
 <link rel="import" href="member-page-element.html">
 <link rel="import" href="member-add-element.html">
@@ -141,7 +144,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="policies-list-element.html">
 <link rel="import" href="policy-item-element.html">
 <link rel="import" href="policy-page-element.html">
-<link rel="import" href="policy-add-element.html">
+<link rel="import" href="policy-add-element.html"> -->
 <!-- <link rel="import" href="policy-edit-element.html"> -->
 <link rel="import" href="grid-list-element.html">
 
