--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -79,74 +79,74 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../styles/shared-styles.html">
 <link rel="import" href="my-greeting/my-greeting.html" <link rel="import" href="my-list/my-list.html">
 
-<link rel="import" href="app-main-element.html">
-<link rel="import" href="dialog-element.html">
-<link rel="import" href="notification-element.html">
-<link rel="import" href="notes-page-element.html">
-<link rel="import" href="styling-quests-page-element.html">
-<link rel="import" href="styling-solutions-page-element.html">
+<link rel="import" href="app-main.html">
+<link rel="import" href="app-dialog.html">
+<link rel="import" href="app-notification.html">
+<link rel="import" href="notes-page.html">
+<link rel="import" href="styling-quests-page.html">
+<link rel="import" href="styling-solutions-page.html">
 <link rel="import" href="styling-mist.html">
-<link rel="import" href="dashboard-page-element.html">
-<link rel="import" href="cloud-add-element.html">
-<link rel="import" href="keys-list-element.html">
-<link rel="import" href="key-item-element.html">
-<link rel="import" href="key-page-element.html">
-<link rel="import" href="key-add-element.html">
-<link rel="import" href="key-edit-element.html">
-<link rel="import" href="machines-list-element.html">
-<link rel="import" href="machine-item-element.html">
-<link rel="import" href="machine-page-element.html">
-<link rel="import" href="machine-add-element.html">
-<link rel="import" href="scripts-list-element.html">
-<link rel="import" href="script-item-element.html">
-<link rel="import" href="script-page-element.html">
-<link rel="import" href="script-run-element.html">
-<link rel="import" href="script-add-element.html">
-<link rel="import" href="script-edit-element.html">
-<link rel="import" href="networks-list-element.html">
-<link rel="import" href="network-item-element.html">
-<link rel="import" href="network-page-element.html">
-<link rel="import" href="network-add-element.html">
-<link rel="import" href="subnet-item-element.html">
-<link rel="import" href="login-page-element.html">
-<link rel="import" href="register-page-element.html">
-<link rel="import" href="details-page-element.html">
-<link rel="import" href="password-page-element.html">
-<link rel="import" href="plans-list-element.html">
-<link rel="import" href="plan-item-element.html">
-<link rel="import" href="feedback-page-element.html">
-<link rel="import" href="subscriptions-list-element.html">
-<link rel="import" href="subscription-item-element.html">
-<link rel="import" href="sessions-list-element.html">
-<link rel="import" href="session-item-element.html">
-<link rel="import" href="templates-list-element.html">
-<link rel="import" href="template-item-element.html">
-<link rel="import" href="template-add-element.html">
-<link rel="import" href="tokens-list-element.html">
-<link rel="import" href="token-item-element.html">
-<link rel="import" href="token-add-element.html">
-<link rel="import" href="user-menu-element.html">
-<link rel="import" href="teams-list-element.html">
-<link rel="import" href="team-item-element.html">
-<link rel="import" href="team-add-element.html">
-<link rel="import" href="team-edit-element.html">
-<link rel="import" href="team-page-element.html">
-<link rel="import" href="team-members-list-element.html">
-<link rel="import" href="team-member-item-element.html">
-<link rel="import" href="team-member-invite-element.html">
-<link rel="import" href="team-rules-list-element.html">
-<link rel="import" href="team-rule-item-element.html">
-<!-- <link rel="import" href="members-list-element.html">
-<link rel="import" href="member-item-element.html">
-<link rel="import" href="member-page-element.html">
-<link rel="import" href="member-add-element.html">
-<link rel="import" href="member-edit-element.html">
-<link rel="import" href="policies-list-element.html">
-<link rel="import" href="policy-item-element.html">
-<link rel="import" href="policy-page-element.html">
-<link rel="import" href="policy-add-element.html"> -->
-<!-- <link rel="import" href="policy-edit-element.html"> -->
-<link rel="import" href="grid-list-element.html">
+<link rel="import" href="dashboard-page.html">
+<link rel="import" href="cloud-add.html">
+<link rel="import" href="keys-list.html">
+<link rel="import" href="key-item.html">
+<link rel="import" href="key-page.html">
+<link rel="import" href="key-add.html">
+<link rel="import" href="key-edit.html">
+<link rel="import" href="machines-list.html">
+<link rel="import" href="machine-item.html">
+<link rel="import" href="machine-page.html">
+<link rel="import" href="machine-add.html">
+<link rel="import" href="scripts-list.html">
+<link rel="import" href="script-item.html">
+<link rel="import" href="script-page.html">
+<link rel="import" href="script-run.html">
+<link rel="import" href="script-add.html">
+<link rel="import" href="script-edit.html">
+<link rel="import" href="networks-list.html">
+<link rel="import" href="network-item.html">
+<link rel="import" href="network-page.html">
+<link rel="import" href="network-add.html">
+<link rel="import" href="subnet-item.html">
+<link rel="import" href="login-page.html">
+<link rel="import" href="register-page.html">
+<link rel="import" href="details-page.html">
+<link rel="import" href="password-page.html">
+<link rel="import" href="plans-list.html">
+<link rel="import" href="plan-item.html">
+<link rel="import" href="feedback-page.html">
+<link rel="import" href="subscriptions-list.html">
+<link rel="import" href="subscription-item.html">
+<link rel="import" href="sessions-list.html">
+<link rel="import" href="session-item.html">
+<link rel="import" href="templates-list.html">
+<link rel="import" href="template-item.html">
+<link rel="import" href="template-add.html">
+<link rel="import" href="tokens-list.html">
+<link rel="import" href="token-item.html">
+<link rel="import" href="token-add.html">
+<link rel="import" href="user-menu.html">
+<link rel="import" href="teams-list.html">
+<link rel="import" href="team-item.html">
+<link rel="import" href="team-add.html">
+<link rel="import" href="team-edit.html">
+<link rel="import" href="team-page.html">
+<link rel="import" href="team-members-list.html">
+<link rel="import" href="team-member-item.html">
+<link rel="import" href="team-member-invite.html">
+<link rel="import" href="team-rules-list.html">
+<link rel="import" href="team-rule-item.html">
+<!-- <link rel="import" href="members-list.html">
+<link rel="import" href="member-item.html">
+<link rel="import" href="member-page.html">
+<link rel="import" href="member-add.html">
+<link rel="import" href="member-edit.html">
+<link rel="import" href="policies-list.html">
+<link rel="import" href="policy-item.html">
+<link rel="import" href="policy-page.html">
+<link rel="import" href="policy-add.html"> -->
+<!-- <link rel="import" href="policy-edit.html"> -->
+<link rel="import" href="grid-list.html">
 
 <!-- Coming from Polymist -->
 <link rel="import" href="app-forms/app-forms.html">
