--- a/app/index.html
+++ b/app/index.html
@@ -314,7 +314,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                                 <app-logo verticalwhite></app-logo>
                             </div>
                             <div class="xs12">
-                                <login-page-element></login-page-element>
+                                <login-page></login-page>
                             </div>
                         </div>
                     </div>
@@ -326,7 +326,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                                 <app-logo verticalwhite></app-logo>
                             </div>
                             <div class="xs12">
-                                <register-page-element></register-page-element>
+                                <register-page></register-page>
                             </div>
                         </div>
                     </div>
@@ -500,7 +500,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
                         <span class="space"></span>
 
-                        <user-menu-element></user-menu-element>
+                        <user-menu></user-menu>
 
                         <!-- Toolbar icons -->
                         <!-- <paper-icon-button icon="refresh"></paper-icon-button>
@@ -555,71 +555,71 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                                 </paper-material>
                             </section>
 
-                            <notes-page-element data-route="notes"></notes-page-element>
+                            <notes-page data-route="notes"></notes-page>
 
-                            <styling-quests-page-element data-route="styling-quests"></styling-quests-page-element>
+                            <styling-quests-page data-route="styling-quests"></styling-quests-page>
 
-                            <styling-solutions-page-element data-route="styling-solutions"></styling-solutions-page-element>
+                            <styling-solutions-page data-route="styling-solutions"></styling-solutions-page>
 
                             <styling-mist data-route="styling-mist"></styling-mist>
 
-                            <dashboard-page-element data-route="dashboard"></dashboard-page-element>
+                            <dashboard-page data-route="dashboard"></dashboard-page>
 
-                            <cloud-add-element data-route="add-cloud"></cloud-add-element>
+                            <cloud-add data-route="add-cloud"></cloud-add>
 
-                            <keys-list-element data-route="keys"></keys-list-element>
+                            <keys-list data-route="keys"></keys-list>
 
-                            <key-page-element data-route="key" id="[[params.id]]"></key-page-element>
+                            <key-page data-route="key" id="[[params.id]]"></key-page>
 
-                            <machines-list-element data-route="machines"></machines-list-element>
+                            <machines-list data-route="machines"></machines-list>
 
-                            <machine-page-element data-route="machine" id="[[params.id]]"></machine-page-element>
+                            <machine-page data-route="machine" id="[[params.id]]"></machine-page>
 
-                            <machine-add-element data-route="add-machine"></machine-add-element>
+                            <machine-add data-route="add-machine"></machine-add>
 
-                            <networks-list-element data-route="networks"></networks-list-element>
+                            <networks-list data-route="networks"></networks-list>
 
-                            <network-page-element data-route="network" id="[[params.id]]"></network-page-element>
+                            <network-page data-route="network" id="[[params.id]]"></network-page>
 
-                            <network-add-element data-route="add-network"></network-add-element>
+                            <network-add data-route="add-network"></network-add>
 
-                            <grid-list-element data-route="grid"></grid-list-element>
+                            <grid-list data-route="grid"></grid-list>
 
-                            <scripts-list-element data-route="scripts"></scripts-list-element>
+                            <scripts-list data-route="scripts"></scripts-list>
 
-                            <script-page-element data-route="script" id="[[params.id]]"></script-page-element>
+                            <script-page data-route="script" id="[[params.id]]"></script-page>
 
-                            <script-add-element data-route="add-script"></script-add-element>
+                            <script-add data-route="add-script"></script-add>
 
-                            <script-run-element data-route="run-script" id="[[params.id]]"></script-run-element>
+                            <script-run data-route="run-script" id="[[params.id]]"></script-run>
 
-                            <templates-list-element data-route="templates"></templates-list-element>
+                            <templates-list data-route="templates"></templates-list>
 
-                            <template-add-element data-route="add-template"></template-add-element>
+                            <template-add data-route="add-template"></template-add>
 
-                            <details-page-element data-route="details"></details-page-element>
+                            <details-page data-route="details"></details-page>
 
-                            <password-page-element data-route="password"></password-page-element>
+                            <password-page data-route="password"></password-page>
 
-                            <plans-list-element data-route="plans"></plans-list-element>
+                            <plans-list data-route="plans"></plans-list>
 
-                            <feedback-page-element data-route="feedback"></feedback-page-element>
+                            <feedback-page data-route="feedback"></feedback-page>
 
-                            <subscriptions-list-element data-route="subscriptions"></subscriptions-list-element>
+                            <subscriptions-list data-route="subscriptions"></subscriptions-list>
 
-                            <sessions-list-element data-route="sessions"></sessions-list-element>
+                            <sessions-list data-route="sessions"></sessions-list>
 
-                            <tokens-list-element data-route="tokens"></tokens-list-element>
+                            <tokens-list data-route="tokens"></tokens-list>
 
-                            <teams-list-element data-route="teams"></teams-list-element>
+                            <teams-list data-route="teams"></teams-list>
 
-                            <team-page-element data-route="team" id="[[params.id]]"></team-page-element>
+                            <team-page data-route="team" id="[[params.id]]"></team-page>
                         </iron-pages>
                     </div>
                 </paper-scroll-header-panel>
             </paper-drawer-panel>
 
-            <notification-element></notification-element>
+            <app-notification></app-notification>
         </template>
 
         <!-- build:js scripts/app.js -->
